apps/mytenant/my-web/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-web
  namespace: mytenant
  labels:
    app: my-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-web
  template:
    metadata:
      labels:
        app: my-web
    spec:
      containers:
        - name: my-web
          image: 032794943726.dkr.ecr.ap-southeast-1.amazonaws.com/mytenant/my-web:latest
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
