apps/mytenant/my-web/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-web
  namespace: mytenant
  labels:
    app: my-web
spec:
  selector:
    app: my-web
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
  type: ClusterIP
