apps/mytenant/my-web/base/virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: my-web
  namespace: istio-system
spec:
  gateways:
    - istio-system/istio-ingressgateway
  hosts:
    - example.labci.com
  http:
    - match:
        - uri:
            prefix: "/my-web/"
      rewrite:
        uri: "/"
      route:
        - destination:
            host: my-web.mytenant.svc.cluster.local
            port:
              number: 80
